tests/ui/mismatched_types/starts-with-stringify-type-mismatch-48364.stderr
error[E0308]: mismatched types
  --> $DIR/starts-with-stringify-type-mismatch-48364.rs:3:21
   |
LL |     b"".starts_with(stringify!(foo))
   |         ----------- ^^^^^^^^^^^^^^^ expected `&[u8]`, found `&str`
   |         |
   |         arguments to this method are incorrect
   |
   = note: expected reference `&[u8]`
              found reference `&'static str`
note: method defined here
  --> $SRC_DIR/core/src/slice/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
